--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c
 osx_image: xcode7.2
-xcode_project: Toutiao.xcodeproj
+xcode_workspace: Toutiao.xcworkspace
 xcode_scheme: Toutiao
 xcode_sdk: iphonesimulator9.2
